--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es2015"],
+    "lib": ["es2015","dom"],
     "module": "es2015",
     "moduleResolution": "Node",
     "target": "es5",
