--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.1.6",
     "jest": "^20.0.3",
     "merge2": "^1.0.3",
@@ -41,6 +42,8 @@
     ]
   },
   "jest": {
+    "collectCoverage": true,
+    "mapCoverage": true,
     "testMatch": [
       "**/dist/test/**/*.js"
     ],
