--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "gulp-typescript": "^3.1.6",
     "jest": "^20.0.3",
     "merge2": "^1.0.3",
+    "react": "^15.5.4",
     "typescript": "^2.3.2"
   },
   "dependencies": {
+    "@types/react": "^15.0.25",
     "tslib": "^1.7.1"
   },
   "babel": {
