--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/uhyo/my-flux#readme",
   "devDependencies": {
     "@types/jest": "^19.2.3",
-    "@types/node": "^7.0.21",
+    "@types/node": "^7.0.22",
     "@types/react-test-renderer": "^15.5.0",
     "babel-jest": "^20.0.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
@@ -29,13 +29,13 @@
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-typescript": "^3.1.6",
-    "jest": "^20.0.3",
+    "gulp-typescript": "^3.1.7",
+    "jest": "^20.0.4",
     "merge2": "^1.0.3",
     "react": "^15.5.4",
     "react-test-renderer": "^15.5.4",
     "ts-jest": "^20.0.5",
-    "typescript": "^2.3.2"
+    "typescript": "^2.3.4"
   },
   "dependencies": {
     "@types/react": "^15.0.25",
@@ -52,7 +52,11 @@
       "**/lib/**/*.ts{,x}"
     ],
     "mapCoverage": true,
-    "moduleFileExtensions": ["ts", "tsx", "js"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
     "testMatch": [
       "**/__tests__/**/*.ts{,x}"
     ],
